manifest & service worker

--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
     "short_name": "To-do App",
     "dir": "ltr",
     "orientation": "any",
-    "scope": "/",
-    "start_url": "index.html",
+    "scope": "./",
+    "start_url": "./",
     "theme_color": "hsl(234, 86%, 68%)",
     "background_color": "hsl(180, 11%, 98%)",
     "display": "standalone",
