estrategia de caché

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "author": "Ana Laura ALmirón",
-    "description": "Trabajo práctico 1 de Aplicaciones Web Progresivas, Escuela Da Vinci",
+    "description": "Trabajo práctico de Aplicaciones Web Progresivas, Escuela Da Vinci",
     "name": "To-do — Organizá mejor tu día a día",
     "short_name": "To-do App",
     "dir": "ltr",
